@@ -7,6 +7,7 @@ python-reahl (3.2.0) unstable; urgency=low
  * Extract DerivedAttributes class from Input class
  * Introduced the InternalRedirect concept
  * Added functionality to replay_request for a MethodResult.
+ * Refactored Input hierarchy to be able to handle CheckboxInput, SingleRadioButton and Input as proper Inputs and be able to deal better with Inputs wrapping other Inputs, now distinguishing between PrimitiveInputs and other types of Inputs
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200
 
